--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.prepmob">
+    package="com.nishant.prepmob">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/prepmob"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/prepmob"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".QuestionActivity"></activity>
-        <activity android:name=".QuestionListActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name="com.nishant.prepmob.QuestionActivity"></activity>
+        <activity android:name="com.nishant.prepmob.QuestionListActivity" />
+        <activity android:name="com.nishant.prepmob.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
